# auto-summer

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/summer_automation/: __init__.py  account.py  adb.py  cli.py  constants.py  device.py  errors.py  models.py  safety.py  ui_tree.py
src/summer_automation/pages/: __init__.py  chat.py  main.py  messages.py  paper.py  strangers.py
tests/: test_messages_page.py  test_ui_tree.py
