[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "summer-automation"
version = "0.1.0"
description = "Authorized QA automation SDK for the Summer Android app."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Summer QA" }
]
dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.scripts]
summerbot = "summer_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
